# rust_study

./: .gitignore  docker-compose.yaml  dockerfile
src/arg_read/: Cargo.toml
src/arg_read/src/: main.rs
src/class/src/: fruits.rs  main.rs
src/divFile/: Cargo.toml
src/divFile/src/: constants.rs  main.rs
src/dotenvy/: .env  Cargo.toml
src/dotenvy/src/: main.rs
src/error/: Cargo.toml
src/error/src/: main.rs
src/fetchUrl/: .env  Cargo.toml
src/fetchUrl/src/: main.rs
src/fetchUrl/src/fetchlib/: fetch_exec.rs  fetch_lib.rs  fetch_param.rs  mod.rs
src/githubCopilotmd/: rustdoc_rule.md
src/md5HashOutput/: Cargo.toml
src/md5HashOutput/src/: main.rs
src/path/: Cargo.toml
src/path/src/: main.rs  read_dir.rs
src/readFiletodb/: .env  Cargo.toml
src/readFiletodb/data/tmp/sample/json/test1/: identifyData.json  sampleJson.json
src/readFiletodb/data/tmp/sample/json/test2/: identifyData.json  sampleJson.json
src/readFiletodb/data/tmp/sample/text/: sampleText.txt
src/readFiletodb/src/: config.rs  error.rs  file_scanner.rs  main.rs
src/readFiletodb/src/db/: imports.rs  mod.rs  schema.rs  schema.sql
src/readFiletodb/src/io/: csv.rs  json.rs  mod.rs  text.rs
src/readFiletodb/src/processing/: mod.rs
src/read_csv/: Cargo.toml
src/read_csv/src/: main.rs
src/read_text/: Cargo.toml
src/read_text/src/: main.rs
src/regex/: Cargo.toml
src/regex/src/: main.rs
src/serch_dir/: Cargo.toml
src/serch_dir/src/: main.rs
src/template/: Cargo.toml
src/template/src/: main.rs
src/testSqlite/src/: main.rs
