[package]
name = "analysXXXsdForRustTemp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tracing = "0.1"
once_cell = "1.19"
regex = "1.11"
serde = "1.0"
serde_json = "1.0"
walkdir = "2.5"
csv = "1.3"
encoding_rs = "0.8"